Update console history when making new requests Fixed spacing between editor and console history Moved registration of keyboard commands to TS Fixed setup_mocks.js after renaming app to application

--- a/src/legacy/core_plugins/console/public/quarantined/src/directives/_history.scss
+++ b/src/legacy/core_plugins/console/public/quarantined/src/directives/_history.scss
@@ -8,6 +8,9 @@
 .conHistory__body {
   display: flex;
   height: $euiSizeXL * 10;
+  > ul {
+    margin-bottom: 0;
+  }
 }
 
 
@@ -21,14 +24,17 @@
   text-align: right;
 }
 
+.conHistory__body__spacer {
+  flex: 0 0 1%;
+}
+
 .conHistory__reqs,
 .conHistory__viewer {
-  flex: 0 0 50%;
+  flex: 0 0 49.5%;
 }
 
 .conHistory__reqs {
   overflow: auto;
-  margin-right: $euiSizeL;
 }
 
 .conHistory__req {
